Instant search feature

--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -6,6 +6,7 @@
       type="search"
       placeholder="Search for books to add to your reading list"
       formControlName="term"
+      (keyup)="searchBooks()"
     />
     <button mat-icon-button matSuffix>
       <mat-icon>search</mat-icon>
