Undo actions feature

--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -34,6 +34,7 @@
             <button
               mat-flat-button
               color="primary"
+              data-testing="want-to-read"
               (click)="addBookToReadingList(b)"
               [disabled]="b.isAdded"
             >
